--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,12 @@
 # cat << ►_◄ > /dev/null
 
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
 
 # General ----------------------------------------------------------------------
 
 set -g focus-events on
-set -g default-terminal "xterm-256color" # colors!
+set -g default-terminal "screen-256color-bce" # colors!
 setw -g xterm-keys on
 set -s escape-time 0 # fastest command sequences
 set -sg repeat-time 600 # increase repeat timeout
@@ -18,8 +20,8 @@ bind C-a send-prefix -2
 #set -g status-keys vi
 #setw -g mode-keys vi
 
-set -g status-utf8 on # expect UTF-8
-setw -g utf8 on
+#set -g status-utf8 on # expect UTF-8
+#setw -g utf8 on
 
 set -g history-limit 5000 # boost history
 
@@ -73,7 +75,6 @@ tmux_conf_theme=powerline_patched_font
 
 # create new session
 bind C-c new-session
-
 # find session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
@@ -85,8 +86,8 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
 
 bind -t vi-choice h tree-collapse
 bind -t vi-choice l tree-expand
-run 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
-run 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
+#run 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
+#run 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
 bind -t vi-choice H tree-collapse-all
 bind -t vi-choice L tree-expand-all
 bind -t vi-choice Escape cancel
@@ -160,3 +161,5 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
+
+set-option -ga terminal-overrides ",xterm-256color:Tc"
