--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,7 @@ set -s quiet on # disable various messages
 set -g prefix2 C-a # GNU-Screen compatible prefix
 bind C-a send-prefix -2
 
+
 # uncomment to force vi-style key bindings
 # emacs is the default unless $EDITOR or $VISUAL contain 'vi'
 #set -g status-keys vi
@@ -149,6 +150,8 @@ set -g @tpm_plugins '                \
     jbnicolai/tmux-fpp      \
 '
 
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 
