--- a/tmux.conf
+++ b/tmux.conf
@@ -21,9 +21,6 @@ bind C-a send-prefix -2
 #set -g status-keys vi
 #setw -g mode-keys vi
 
-#set -g status-utf8 on # expect UTF-8
-#setw -g utf8 on
-
 set -g history-limit 5000 # boost history
 
 # edit configuration
@@ -152,6 +149,7 @@ set -g @tpm_plugins '                \
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm'
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 
