Updated tmux config; other changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # cat << ►_◄ > /dev/null
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
@@ -6,11 +7,11 @@ new-session -n $HOST
 # General ----------------------------------------------------------------------
 
 set -g focus-events on
-set -g default-terminal "screen-256color-bce" # colors!
-setw -g xterm-keys on
+#set -g default-terminal "xterm-256color" # colors!
+set -g xterm-keys on
 set -s escape-time 0 # fastest command sequences
 set -sg repeat-time 600 # increase repeat timeout
-set -s quiet on # disable various messages
+# set -s quiet on # disable various messages
 
 set -g prefix2 C-a # GNU-Screen compatible prefix
 bind C-a send-prefix -2
@@ -82,21 +83,21 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s toggle_mouse"
 
 # List choice ------------------------------------------------------------------
 
-bind -t vi-choice h tree-collapse
-bind -t vi-choice l tree-expand
-#run 'tmux bind -t vi-choice K start-of-list 2> /dev/null'
-#run 'tmux bind -t vi-choice J end-of-list 2> /dev/null'
-bind -t vi-choice H tree-collapse-all
-bind -t vi-choice L tree-expand-all
-bind -t vi-choice Escape cancel
+bind -T choice-vi h send-keys -X tree-collapse
+bind -T choice-vi l send-keys -X tree-expand
+run 'tmux bind -T choice-vi K send-keys -X start-of-list 2> /dev/null'
+run 'tmux bind -T choice-vi J send-keys -X end-of-list 2> /dev/null'
+bind -T choice-vi H send-keys -X tree-collapse-all
+bind -T choice-vi L send-keys -X tree-expand-all
+bind -T choice-vi Escape send-keys -X cancel
 
 
 # Edit mode --------------------------------------------------------------------
 
-bind -ct vi-edit H start-of-line
-bind -ct vi-edit L end-of-line
-bind -ct vi-edit q cancel
-bind -ct vi-edit Escape cancel
+bind -c -T edit-vi H send-keys -X start-of-line
+bind -c -T edit-vi L send-keys -X end-of-line
+bind -c -T edit-vi q send-keys -X cancel
+bind -c -T edit-vi Escape send-keys -X cancel
 
 
 # Copy mode --------------------------------------------------------------------
@@ -106,12 +107,12 @@ bind b list-buffers # list paster buffers
 bind p paste-buffer # paste from the top pate buffer
 bind P choose-buffer # choose which buffer to paste from
 
-bind -t vi-copy v begin-selection
-bind -t vi-copy C-v rectangle-toggle
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-bind -t vi-copy H start-of-line
-bind -t vi-copy L end-of-line
+bind -T copy-vi v send-keys -X begin-selection
+bind -T copy-vi C-v send-keys -X rectangle-toggle
+bind -T copy-vi y send-keys -X copy-selection
+bind -T copy-vi Escape send-keys -X cancel
+bind -T copy-vi H send-keys -X start-of-line
+bind -T copy-vi L send-keys -X end-of-line
 
 # copy to Mac OSX pasteboard
 if 'which -s reattach-to-user-namespace' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
