--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,13 @@ new-session -n $HOST
 # General ----------------------------------------------------------------------
 
 set -g focus-events on
-#set -g default-terminal "xterm-256color" # colors!
+set -g default-terminal "screen" # colors!
 set -g xterm-keys on
 set -s escape-time 0 # fastest command sequences
 set -sg repeat-time 600 # increase repeat timeout
 # set -s quiet on # disable various messages
+
+set -g set-clipboard off
 
 set -g prefix2 C-a # GNU-Screen compatible prefix
 bind C-a send-prefix -2
