Moved to coc.vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -96,10 +96,10 @@ bind -T choice-vi Escape send-keys -X cancel
 
 # Edit mode --------------------------------------------------------------------
 
-bind -c -T edit-vi H send-keys -X start-of-line
-bind -c -T edit-vi L send-keys -X end-of-line
-bind -c -T edit-vi q send-keys -X cancel
-bind -c -T edit-vi Escape send-keys -X cancel
+#bind -c -T edit-vi H send-keys -X start-of-line
+#bind -c -T edit-vi L send-keys -X end-of-line
+#bind -c -T edit-vi q send-keys -X cancel
+#bind -c -T edit-vi Escape send-keys -X cancel
 
 
 # Copy mode --------------------------------------------------------------------
