removed jinja2 plugin + added impatient

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # cat << ►_◄ > /dev/null
-set -ga terminal-overrides ",xterm-256color:Tc"
+#set -ga terminal-overrides ",xterm-256color:Tc"
+set -as terminal-features ",xterm-256color:RGB"
 
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
@@ -7,7 +8,7 @@ new-session -n $HOST
 # General ----------------------------------------------------------------------
 
 set -g focus-events on
-set -g default-terminal "screen" # colors!
+set -g default-terminal "tmux-256color" # colors!
 set -g xterm-keys on
 set -s escape-time 0 # fastest command sequences
 set -sg repeat-time 600 # increase repeat timeout
