--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 # cat << ►_◄ > /dev/null
-#set -ga terminal-overrides ",xterm-256color:Tc"
-set -as terminal-features ",xterm-256color:RGB"
+#set-option -ga terminal-overrides ",tmux-256color:Tc"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -sa terminal-overrides ',*:RGB'
+#set -as terminal-features ",xterm-256color:RGB"
 
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
@@ -8,7 +10,7 @@ new-session -n $HOST
 # General ----------------------------------------------------------------------
 
 set -g focus-events on
-set -g default-terminal "tmux-256color" # colors!
+#set -g default-terminal "tmux-256color" # colors!
 set -g xterm-keys on
 set -s escape-time 0 # fastest command sequences
 set -sg repeat-time 600 # increase repeat timeout
@@ -167,4 +169,3 @@ bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
 
-set-option -ga terminal-overrides ",xterm-256color:Tc"
